--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   jvm-build:
-    name: JVM Build and Test
+    name: Build and Test
     runs-on: ubuntu-latest
 
     steps:
@@ -27,4 +27,4 @@ jobs:
       run: chmod +x gradlew
 
     - name: Build and test
-      run: ./gradlew build test
+      run: ./gradlew build allTest
